docs(): adding documentation - deliveryman
